--- a/THIS_IS_A_FOLDER/index.html
+++ b/THIS_IS_A_FOLDER/index.html
@@ -1,5 +1,78 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
-  <body></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University Courses</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        table {
+            width: 50%;
+            margin: 20px auto;
+            font-weight: 700;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+            background-color: #c2c4c5;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        div {
+            width: 60%;
+            margin-left: 300px;
+            margin-top: 100px;
+            background-color: #e9db8d;
+            box-shadow: #333 5px 8px 8px;
+            padding: 70px;
+        }
+    </style>
+</head>
+<body>
+    <div>
+    <h1>Welcome to University Of Software Applications</h1>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo ac nisi feugiat ultricies eget eu massa.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad hic numquam vero beatae corrupti iure perferendis dolore mollitia aperiam sint minima dignissimos laborum, necessitatibus nemo quo laudantium quia odio molestiae?
+    </p>
+    
+    <table border="1">
+        <tr>
+            <th>Course</th>
+            <th>Requirements</th>
+        </tr>
+        <tr>
+            <td>Web development</td>
+            <td>$Math\ 101$</td>
+        </tr>
+        <tr>
+            <td>Computer Science</td>
+            <td>$CS\ 101$, $CS\ 201$</td>
+        </tr>
+        <tr>
+            <td>App development</td>
+            <td>$Computer basics\ 101$, $Math\ 201$</td>
+        </tr>
+        <tr>
+            <td>Software development</td>
+            <td>$Computer basics\ 101$, $Math\ 201$</td>
+        </tr>
+        <tr>
+            <td>Java development</td>
+            <td>$Computer basics\ 101$, $Math\ 201$</td>
+        </tr>
+    </table>
+    </div>
+</body>
 </html>
